refactor: 중복 메서드를 통합하고, 메서드의 클래스를 변경한다.
명확한 역할 분리를 위해 메서드의 클래스를 변경한다.